--- a/README
+++ b/README
@@ -1,7 +1,17 @@
 Allows users to create polls which can then be embedded in any page with a
 <script> tag. Uses AJAX for voting and retrieving results.
 
-Requires the following Django apps: auth, sessions.
+Depends on the following Django apps: auth, sessions.
+
+You will need to copy the directory askmeanything/media/askmeanything to your
+site's MEDIA_ROOT or create a symlink.
+
+Sprinkler also requires jQuery v1.3 for the nice calendar widget. If you are
+not already using jQuery, you can add the following script tag to your
+template for the publish form page:
+
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
+
 
 Templates:
 See the test project for how to set up the poll creation page (especially the
