--- a/README
+++ b/README
@@ -6,8 +6,8 @@ Depends on the following Django apps: auth, sessions.
 You will need to copy the directory askmeanything/media/askmeanything to your
 site's MEDIA_ROOT or create a symlink.
 
-AskMeAnything also requires jQuery v1.3 for the nice calendar widget. If you
-are not already using jQuery, you can add the following script tag to your
+AskMeAnything also requires jQuery v1.3 for the poll creation form. If you are
+not already using jQuery, you can add the following script tag to your
 template for the publish form page:
 
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
