--- a/README
+++ b/README
@@ -8,7 +8,7 @@ site's MEDIA_ROOT or create a symlink.
 
 AskMeAnything also requires jQuery v1.3 for the poll creation form. If you are
 not already using jQuery, you can add the following script tag to your
-template for the publish form page:
+template for the poll creation page:
 
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
 
